samples/_failures_safe/1761373815_7f726b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_328e6fd9.c: In function ‘main’:
./samples/SAFE/__tmp_328e6fd9.c:164:5: error: expected declaration or statement at end of input
  164 |     char input[1024];
      |     ^~~~
